@@ -18,10 +18,10 @@
 		<prop name="portType" type="String" value="3"/>
 		<!-- portClass  -->
 		<!--<prop name="portClass" type="String" value="com.shtrih.fiscalprinter.port.FtdiPrinterPort"/>  -->
-		<prop name="portClass" type="String" value="com.shtrih.fiscalprinter.port.UsbPrinterPort"/>
+		<prop name="portClass" type="String" value="com.shtrih.fiscalprinter.port.BluetoothPort"/>
 		<!--Other non JavaPOS required property (mostly vendor properties and bus specific properties i.e. RS232 )-->
 		<!-- ProtocolType, 0 - protocol 1, 1 - protocol 2 -->
-		<prop name="protocolType" type="String" value="0"/>
+		<prop name="protocolType" type="String" value="1"/>
 		<!--Port name-->
 		<!--For serial ports - COM1, for TCP ports: host:port - "10.11.7.210:12345" -->
 		<!--<prop name="portName" type="String" value="10.11.7.210:12345"/> -->
@@ -178,7 +178,7 @@
 		<!-- 1 - header stored and printed by printer, numHeaderLine and numTrailerLines are fixed -->
 		<!-- 2 - header stored and printed with driver, header printed on receipt begin -->
 		<!-- 3 - header will be printed when printer configured to do so -->
-		<prop name="headerMode" type="String" value="2"/>
+		<prop name="headerMode" type="String" value="3"/>
 		<!-- Text report enabled -->
 		<prop name="textReportEnabled" type="String" value="1"/>
 		<!-- Text report file name -->
@@ -202,7 +202,7 @@
              поддержана/включена в ФР:
              0 - выкл.
              1 - вкл. -->
-		<prop name="FSServiceEnabled" type="String" value="1"/>
+		<prop name="FSServiceEnabled" type="String" value="0"/>
 		
 		<!-- Таймаут ожидания ответа от ОФД в мс. Используется при включенной отпции FSServiceEnabled. -->
 		<prop name="FSConnectTimeout" type="String" value="30000"/>
